# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2013 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.2260.2.206 2013-02-14 13:31:52 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.1.20 2014-02-25
 - 2014-02-20 Improved HTML filter.

3.1.19 2014-01-28
 - 2014-01-14 Fixed bug#10158 - Missing quoting in State::StateGetStatesByType().
 - 2013-12-20 Fixed bug#10099 - Missing challenge token checks on customer interface.
 - 2013-09-20 Fixed bug#8489 - setting Tickets per page resets AgentTicketQueue.
 - 2013-09-06 Fixed bug#9661 - Useless code in DynamicField backend.
 - 2013-07-24 Fixed bug#9622 - Actions in Small ticket overview don't work when cookies are turned off.
 - 2013-07-22 Fixed bug#9541 - Package manager cannot use https proxy.
 - 2013-07-17 Fixed bug#9594 - No auto-reply sent with multiple From addresses in AgentTicketPhone on PostgreSQL and Oracle.
 - 2013-07-12 Fixed bug#3434 - Validity of search time frame not checked by OTRS.
 - 2013-07-10 Fixed bug#9596 - On merge and bounce screens is confusing when fill or not 'To', 'Subject' and 'Body' fields.
 - 2013-07-10 Fixed bug#9595 - Incomplete page reload handling in merge and bounce.
 - 2013-07-09 Fixed bug#3007 - CheckMXRecord and CheckEmailAddresses have no effect on AgentTicketBounce.
 - 2013-07-09 Fixed bug#9512 - Database error for invalid date in AgentTicketSearch.
 - 2013-07-09 Fixed bug#8835 - No article found for TicketID <TICKET ID> when showing group tickets
 - 2013-07-08 Fixed bug#9583 - Dynamic Fields of type Date have timestamp in notifications.
 - 2013-07-08 Fixed bug#9579 - SOAP Serializer used in Kernel/GenericInterface/Transport/HTTP/SOAP.pm does not correctly set namespace.
 - 2013-07-08 Fixed bug#7359 - Setting pending states via generic agent does not set pending time.