@@ -10,6 +10,7 @@
 # --
 
 3.1.20 2014-02-25
+ - 2014-02-21 Fixed bug#10287 - AdminEmail does not work / causes internal server error.
  - 2014-02-20 Improved HTML filter.
 
 3.1.19 2014-01-28
